--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-README
+These are a set of macros for use within Confluence.
+
+NOTE: Although they have the file extension of '.css', this simply the file extension I use when editing in Notepad++. It does a pretty good job.
